change config